# zephyr-accel-sensor

./: CMakeLists.txt  Kconfig  README.md
drivers/sensor/: accel-sensor.c  accel-sensor.h
dts/bindings/sensor/: baden,accel-sensor.yaml  zephyr,accel-sensor.yaml
zephyr/: module.yml
